<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView android:text="@string/introdPizz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="17sp"/>

        <ImageView
            android:contentDescription="@string/descripImageTitular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logopizza"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Spinner
            android:id="@+id/spinnerPizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroupPedido">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local"
                android:id="@+id/radioLocal"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domicilio"
                android:id="@+id/radioDomicilio"/>

        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxGrande"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grande"/>

        <CheckBox
            android:id="@+id/checkBoxIngred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingrediente"/>
        <CheckBox
            android:id="@+id/checkBoxQueso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extraQueso"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/numPizza"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/numUnid"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonFichaPizzeria"
            android:text="@string/buttonFichaPizzeria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/precioFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


</LinearLayout>
